// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders HorizontalRule with custom green color 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: -0.5rem 0;
}

.c0::after,
.c0::before {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-top: 1px solid rgb(194,200,203);
  content: '';
}

.c0::before {
  margin-right: 0.5rem;
}

.c0::after {
  margin-left: 0.5rem;
}

@media print {

}

@media print {

}

<p
  class="c0"
  color="#00FF00"
>
  or
</p>
`;

exports[`Renders HorizontalRule with defaults 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: -0.5rem 0;
}

.c0::after,
.c0::before {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-top: 1px solid;
  content: '';
}

.c0::before {
  margin-right: 0.5rem;
}

.c0::after {
  margin-left: 0.5rem;
}

@media print {

}

@media print {

}

<p
  class="c0"
>
  or
</p>
`;

exports[`Renders HorizontalRule without children 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: -0.5rem 0;
}

.c0::after,
.c0::before {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-top: 1px solid;
  content: '';
}

@media print {

}

@media print {

}

<p
  class="c0"
/>
`;
